tests/cases/errors/string_element_nba_rejected/main.sv
module Top;
  string s = "hello";
  initial begin
    s[0] <= "H";
  end
endmodule
